fixed color contrast

--- a/wwr/styles/rafting2.css
+++ b/wwr/styles/rafting2.css
@@ -112,7 +112,7 @@ textarea{
 }
 button {
     margin: 0.5rem;
-    background-color: rgb(68, 68, 255);
+    background-color: rgb(0, 0, 119);
     color: #fff;
     border: none;
     border-radius: .5rem;
